--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,17 @@
+assertpy==1.1
 click==7.1.2
 colorama==0.4.6
 exceptiongroup==1.1.1
 Flask==1.1.2
+freezegun==1.2.2
 iniconfig==2.0.0
 itsdangerous==1.1.0
-Jinja2==3.1.1
+Jinja2==3.0.3
 MarkupSafe==2.1.1
 packaging==23.1
 pluggy==1.0.0
 pytest==7.3.1
+python-dateutil==2.8.2
+six==1.16.0
 tomli==2.0.1
 Werkzeug==1.0.1
