--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,47 @@
 assertpy==1.1
-click==7.1.2
+blinker==1.6.2
+Brotli==1.0.9
+certifi==2023.5.7
+cffi==1.15.1
+charset-normalizer==3.1.0
+click==8.1.3
 colorama==0.4.6
+ConfigArgParse==1.5.5
+coverage==7.2.7
 exceptiongroup==1.1.1
-Flask==1.1.2
+execnet==1.9.0
+Flask==2.3.2
+Flask-BasicAuth==0.2.0
+Flask-Cors==4.0.0
 freezegun==1.2.2
+gevent==22.10.2
+geventhttpclient==2.0.9
+greenlet==2.0.2
+idna==3.4
+importlib-metadata==6.7.0
 iniconfig==2.0.0
-itsdangerous==1.1.0
-Jinja2==3.0.3
+itsdangerous==2.1.2
+Jinja2==3.1.2
+locust==2.15.1
 MarkupSafe==2.1.1
+msgpack==1.0.5
 packaging==23.1
 pluggy==1.0.0
+psutil==5.9.5
+pycparser==2.21
 pytest==7.3.1
+pytest-cov==4.1.0
+pytest-xdist==3.3.1
 python-dateutil==2.8.2
+pywin32==306
+pyzmq==25.1.0
+requests==2.31.0
+roundrobin==0.0.4
 six==1.16.0
 tomli==2.0.1
-Werkzeug==1.0.1
+typing_extensions==4.7.1
+urllib3==2.0.3
+Werkzeug==2.3.6
+zipp==3.15.0
+zope.event==5.0
+zope.interface==6.0
